src/test/deca/context/invalid/already-declared.deca
// Description :
//
// Résultats :
//    Erreur de contexte : "Variable déjà déclarée dans ce bloc"
//
// Historique :
//    créé le 11/01/2025
{
    int x = 0;
    int x = 1;
}
